resolved errors